# ros2_genai_planning

genai_planner/: CMakeLists.txt  README.md  package.xml
genai_planner/include/genai_planner/: GenAIPlanner.hpp
genai_planner/prompts/: intro.yaml  plan_example.yaml
genai_planner/src/genai_planner/: GenAIPlanner.cpp
genai_planning_interfaces/: CMakeLists.txt  README.md  package.xml
genai_planning_interfaces/srv/: Plan.srv
